Remove idea folder